--- a/kit_sunless_mg.html
+++ b/kit_sunless_mg.html
@@ -29,7 +29,7 @@
     <!-- KIT MAR -->
     <div class="container text-center">
 
-        <h2 class="abaixa"><span class="estados"><img class="img-fluid logo mb-5" src="images/es.svg" alt="Verão Gama 2024">Espírito Santo</span></h2>
+        <h2 class="abaixa"><span class="estados"><img class="img-fluid logo mb-5" src="images/mg.svg" alt="Verão Gama 2024">Minas Gerais</span></h2>
     
         <!-- MARCA PRODUTO -->
         <div>
@@ -47,7 +47,7 @@
                 <div id="tab-sunless_mar" class="p-1 mb-2 rounded">KIT MAR</div>
             </div>
             <div class="col-md-6">
-                <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 3.000,00</div>
+                <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 4.000,00</div>
             </div>
             <div class="col-md-6">
                 <div class="p-3 mb-2 bg-info valor_quantidade text-white rounded"><i class="bi bi-bag-check-fill"></i> Quantidade mínima: 12 itens distintos</div>
@@ -55,7 +55,7 @@
         </div>
 
         <div class="fonte_tabela table-responsive">
-            <table class="table table-striped table-bordered table-hover" id="dados_sunless_mar_es">
+            <table class="table table-striped table-bordered table-hover" id="dados_sunless_mar_mg">
                 <thead>
                     <tr>
                         <th class="col-thin" id="tab_colunas">CÓDIGO</th>
@@ -95,14 +95,14 @@
                 <div class="p-3 mb-2 bg-light condicoes_box"><p><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
                     <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
-                </svg></p><p>Condições de pagamento</p><p>09/12/2024<br>07/01/2025<br>04/02/2025</p><p>COD PLANO 1158</p></div>
+                </svg></p><p>Condições de pagamento</p><p>09/12/2024<br>07/01/2025<br>04/02/2025</p><p>COD PLANO 1183</p></div>
             </div>
 
             <div class="col-md-4">
                 <div class="p-3 mb-2 bg-light condicoes_box"><p><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
                     <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
-                </svg></p><p>Condições de pagamento</p><p>07/01/2025</p><p>COD PLANO 1159</p></div>
+                </svg></p><p>Condições de pagamento</p><p>07/01/2025</p><p>COD PLANO 1184</p></div>
             </div>
 
             <div class="col-md-4">
@@ -110,7 +110,7 @@
                     <path d="M5.5 9.511c.076.954.83 1.697 2.182 1.785V12h.6v-.709c1.4-.098 2.218-.846 2.218-1.932 0-.987-.626-1.496-1.745-1.76l-.473-.112V5.57c.6.068.982.396 1.074.85h1.052c-.076-.919-.864-1.638-2.126-1.716V4h-.6v.719c-1.195.117-2.01.836-2.01 1.853 0 .9.606 1.472 1.613 1.707l.397.098v2.034c-.615-.093-1.022-.43-1.114-.9zm2.177-2.166c-.59-.137-.91-.416-.91-.836 0-.47.345-.822.915-.925v1.76h-.005zm.692 1.193c.717.166 1.048.435 1.048.91 0 .542-.412.914-1.135.982V8.518z"/>
                     <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
                     <path d="M8 13.5a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11m0 .5A6 6 0 1 0 8 2a6 6 0 0 0 0 12"/>
-                  </svg></p><p>1,2% de desconto para pagamento à vista.</p><p>COD PLANO 1160</p></div>
+                  </svg></p><p>1,2% de desconto para pagamento à vista.</p><p>COD PLANO 1185</p></div>
             </div>
         </div>
 
@@ -130,7 +130,7 @@
                 <div id="tab-sunless_sol" class="p-1 mb-2 rounded">KIT SOL</div>
             </div>
             <div class="col-md-6">
-                <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 2.000,00</div>
+                <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 3.000,00</div>
             </div>
             <div class="col-md-6">
                 <div class="p-3 mb-2 bg-info valor_quantidade text-white rounded"><i class="bi bi-bag-check-fill"></i> Quantidade mínima: 09 itens distintos</div>
@@ -138,7 +138,7 @@
         </div>
 
         <div class="fonte_tabela table-responsive">
-            <table class="table table-striped table-bordered table-hover" id="dados_sunless_sol_es">
+            <table class="table table-striped table-bordered table-hover" id="dados_sunless_sol_mg">
                 <thead>
                     <tr>
                         <th class="col-thin" id="tab_colunas">CÓDIGO</th>
@@ -178,14 +178,14 @@
                 <div class="p-3 mb-2 bg-light condicoes_box"><p><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
                     <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
-                </svg></p><p>Condições de pagamento</p><p>09/12/2024<br>07/01/2025</p><p>COD PLANO 1161</p></div>
+                </svg></p><p>Condições de pagamento</p><p>09/12/2024<br>07/01/2025</p><p>COD PLANO 1186</p></div>
             </div>
 
             <div class="col-md-6">
                 <div class="p-3 mb-2 bg-light condicoes_box"><p><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
                     <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
-                </svg></p><p>1,2% de desconto para pagamento à vista.</p><p>COD PLANO 1162</p></div>
+                </svg></p><p>1,2% de desconto para pagamento à vista.</p><p>COD PLANO 1187</p></div>
             </div>
         </div>
 
@@ -205,7 +205,7 @@
                 <div id="tab-sunless_areia" class="p-1 mb-2 rounded">KIT AREIA</div>
             </div>
             <div class="col-md-6">
-                <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 1.000,00</div>
+                <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 1.500,00</div>
             </div>
             <div class="col-md-6">
                 <div class="p-3 mb-2 bg-info valor_quantidade text-white rounded"><i class="bi bi-bag-check-fill"></i> Quantidade mínima: 06 itens distintos</div>
@@ -213,7 +213,7 @@
         </div>
 
         <div class="fonte_tabela table-responsive">
-            <table class="table table-striped table-bordered table-hover" id="dados_sunless_areia_es">
+            <table class="table table-striped table-bordered table-hover" id="dados_sunless_areia_mg">
                 <thead>
                     <tr>
                         <th class="col-thin" id="tab_colunas">CÓDIGO</th>
@@ -253,14 +253,14 @@
                 <div class="p-3 mb-2 bg-light condicoes_box"><p><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
                     <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
-                </svg></p><p>Condições de pagamento</p><p>09/12/2024</p><p>COD PLANO 1163</p></div>
+                </svg></p><p>Condições de pagamento</p><p>09/12/2024</p><p>COD PLANO 1188</p></div>
             </div>
 
             <div class="col-md-6">
                 <div class="p-3 mb-2 bg-light condicoes_box"><p><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
                     <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
-                </svg></p><p>1,2% de desconto para pagamento à vista.</p><p>COD PLANO 1164</p></div>
+                </svg></p><p>1,2% de desconto para pagamento à vista.</p><p>COD PLANO 1189</p></div>
             </div>
         </div>
 
