--- a/rede_soma.html
+++ b/rede_soma.html
@@ -28,7 +28,7 @@
 
     <div class="row">
         <div class="col-12 img-container text-center">
-            <img src="images/rede_soma_01.jpeg" alt="Rede Soma">
+            <img class="img-fluid" src="images/rede_soma_01.jpeg" alt="Rede Soma">
         </div>
     </div>
 
@@ -39,7 +39,7 @@
 
     <div class="row">
         <div class="col-12 img-container text-center">
-            <img src="images/rede_soma_02.jpeg" alt="Rede Soma">
+            <img class="img-fluid" src="images/rede_soma_02.jpeg" alt="Rede Soma">
         </div>
     </div>
 
@@ -50,7 +50,7 @@
 
     <div class="row">
         <div class="col-12 img-container text-center">
-            <img src="images/rede_soma_03.jpeg" alt="Rede Soma">
+            <img class="img-fluid" src="images/rede_soma_03.jpeg" alt="Rede Soma">
         </div>
     </div>
 
@@ -61,7 +61,7 @@
 
     <div class="row">
         <div class="col-12 img-container text-center">
-            <img src="images/rede_soma_04.jpeg" alt="Rede Soma">
+            <img class="img-fluid" src="images/rede_soma_04.jpeg" alt="Rede Soma">
         </div>
     </div>
 
@@ -72,7 +72,7 @@
 
     <div class="row">
         <div class="col-12 img-container text-center">
-            <img src="images/rede_soma_05.jpeg" alt="Rede Soma">
+            <img class="img-fluid" src="images/rede_soma_05.jpeg" alt="Rede Soma">
         </div>
     </div>
 
