--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         <!-- Combo KITS -->
         <div class="container">
             <div class="row">
-                <div class="col-md-4 mb-4">
+                <!-- <div class="col-md-4 mb-4">
                     <a href="rede_soma.html" class="btn-custom btn-10">
                         <img src="images/logo_rede_soma.png" alt="Cenoura e Bronze">
                     </a>
-                </div>
+                </div> -->
                 <div class="col-md-4 mb-4">
                     <a href="kit_loreal_lbd.html" class="btn-custom loreal_lbd btn-6">
                         <img src="images/logo_vichy_laroche.svg" alt="Loreal LBD">
