--- a/kit_loreal_dpgp_mg.html
+++ b/kit_loreal_dpgp_mg.html
@@ -46,7 +46,7 @@
                 <div id="tab-loreal_dpgp_ouro" class="p-1 mb-2 rounded">KIT OURO</div>
             </div>
             <div class="col-md-6">
-                <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 7.000,00</div>
+                <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 4.000,00</div>
             </div>
             <div class="col-md-6">
                 <div class="p-3 mb-2 bg-info valor_quantidade text-white rounded"><i class="bi bi-bag-check-fill"></i> Quantidade mínima: 12 itens distintos</div>
@@ -60,7 +60,7 @@
                         <th class="col-thin" id="tab_colunas">CÓDIGO</th>
                         <th class="col-large" id="tab_colunas">PRODUTO</th>
                         <th class="col-thin" id="tab_colunas">QUANT. SUGERIDA</th>
-                        <th class="col-small" id="tab_colunas">VALOR UNITÁRIO<br>COM 12% DESC.</th>
+                        <th class="col-small" id="tab_colunas">VALOR UNITÁRIO<br>COM 10% DESC.</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -68,7 +68,7 @@
                 </tbody>
                 <thead>
                     <tr >
-                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens 9598 e 15841 são obrigatórios. Os itens 26278 e 26925 possuem a quantidade máxima de pack por kit, favor enviar a quantidade de promopack na observação do pedido.</th>
+                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>O item 26925 possuem a quantidade máxima de pack por kit, favor enviar a quantidade de promopack na observação do pedido.</th>
                     </tr>
                 </thead>
             </table>
@@ -94,14 +94,14 @@
                 <div class="p-3 mb-2 bg-light condicoes_box"><p><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
                     <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
-                  </svg></p><p>12% DE DESCONTO</p><p>09/12/2024<br>07/01/2025<br>04/02/2025</p></div>
+                  </svg></p><p>10% DE DESCONTO</p><p>09/12/2024<br>07/01/2025<br>04/02/2025</p></div>
             </div>
 
             <div class="col-md-6">
                 <div class="p-3 mb-2 bg-light condicoes_box"><p><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
                     <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
-                  </svg></p><p>12% DE DESCONTO</p><p>07/01/2025</p></div>
+                  </svg></p><p>10% DE DESCONTO</p><p>07/01/2025</p></div>
             </div>
         </div>
 
@@ -121,7 +121,7 @@
                 <div id="tab-loreal_dpgp_prata" class="p-1 mb-2 rounded">KIT PRATA</div>
             </div>
             <div class="col-md-6">
-                <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 5.000,00</div>
+                <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 2.000,00</div>
             </div>
             <div class="col-md-6">
                 <div class="p-3 mb-2 bg-info valor_quantidade text-white rounded"><i class="bi bi-bag-check-fill"></i> Quantidade mínima: 10 itens distintos</div>
@@ -136,7 +136,7 @@
                         <th class="col-thin" id="tab_colunas">CÓDIGO</th>
                         <th class="col-large" id="tab_colunas">PRODUTO</th>
                         <th class="col-thin" id="tab_colunas">QUANT. SUGERIDA</th>
-                        <th class="col-small" id="tab_colunas">VALOR UNITÁRIO<br>COM 10% DESC.</th>
+                        <th class="col-small" id="tab_colunas">VALOR UNITÁRIO<br>COM 5% DESC.</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -144,7 +144,7 @@
                 </tbody>
                 <thead>
                     <tr >
-                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens 9598 e 15841 são obrigatórios. O item 26925 possui quantidade máxima de pack por kit, favor enviar a quantidade de promopack na observação do pedido.</th>
+                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>O item 26925 possui quantidade máxima de pack por kit, favor enviar a quantidade de promopack na observação do pedido.</th>
                     </tr>
                 </thead>
             </table>
@@ -170,14 +170,14 @@
                 <div class="p-3 mb-2 bg-light condicoes_box"><p><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
                     <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
-                  </svg></p><p>10% DE DESCONTO</p><p>09/12/2024<br>07/01/2025</p></div>
+                  </svg></p><p>5% DE DESCONTO</p><p>09/12/2024<br>07/01/2025</p></div>
             </div>
 
             <div class="col-md-6">
                 <div class="p-3 mb-2 bg-light condicoes_box"><p><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
                     <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
-                  </svg></p><p>10% DE DESCONTO</p><p>09/12/2024</p></div>
+                  </svg></p><p>5% DE DESCONTO</p><p>09/12/2024</p></div>
             </div>
         </div>
 
@@ -188,10 +188,10 @@
         <img src="images/separador.svg" alt="Separador"> <!-- SVG ao invés do texto -->
     </div>
 
-    <!-- KIT BRONZE -->
+    <!-- KIT BRONZE 
     <div class="container text-center mt-5">
         
-        <!--CABEÇALHO BRONZE-->
+        CABEÇALHO BRONZE
         <div class="row">
             <div class="col-md-12">
                 <div id="tab-loreal_dpgp_bronze" class="p-1 mb-2 rounded">KIT BRONZE</div>
@@ -204,7 +204,7 @@
             </div>
         </div>
         
-        <!-- TABELA DE PRODUTOS -->
+        TABELA DE PRODUTOS
         <div class="fonte_tabela table-responsive">
             <table class="table table-striped table-bordered table-hover" id="dados_loreal_dpgp_bronze_mg">
                 <thead>
@@ -216,7 +216,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <!-- AQUI ESTÃO OS DADOS DAS TABELAS -->
+                    AQUI ESTÃO OS DADOS DAS TABELAS
                 </tbody>
                 <thead>
                     <tr >
@@ -226,21 +226,21 @@
             </table>
         </div>
 
-        <!--BOTÃO ANÁLISE DE CRÉDITO-->
+        BOTÃO ANÁLISE DE CRÉDITO
         <div class="row">
             <div class="col-12">
                 <div class="p-3 mb-2 bg-warning">PEDIDO SUJEITO A ANÁLISE DE CRÉDITO</div>
             </div>
         </div>
 
-        <!--CONDIÇÕES DE PAGAMENTO-->
+        CONDIÇÕES DE PAGAMENTO
         <div class="row">
             <div class="col-12">
                 <div class="p-3 mb-2 condicoes_pagamento">Condições de pagamento</div>
             </div>
         </div>
 
-        <!--CONDIÇÕES-->
+       CONDIÇÕES
         <div class="row lh-1">
 
             <div class="col-md-2"></div>
@@ -255,10 +255,7 @@
 
     </div>
 
-    <!-- SEPARADOR -->
-    <div class="separator-text">
-        <img src="images/separador.svg" alt="Separador"> <!-- SVG ao invés do texto -->
-    </div>
+
 
     <!-- RODAPÉ -->
     <div id="footer-placeholder"></div>
