--- a/kit_loreal_dpgp_mg.html
+++ b/kit_loreal_dpgp_mg.html
@@ -105,6 +105,9 @@
             </div>
         </div>
 
+        <p>Ofertas válidas de 23/09/2024 a 27/09/2024 ou enquanto durarem os estoques.<br>Planos de pagamento em até 35 dias, sujeitos à aprovação de crédito.</p>
+
+
     </div>
 
     <!-- SEPARADOR -->
@@ -180,6 +183,8 @@
                   </svg></p><p>5% DE DESCONTO</p><p>09/12/2024</p></div>
             </div>
         </div>
+
+        <p>Ofertas válidas de 23/09/2024 a 27/09/2024 ou enquanto durarem os estoques.<br>Planos de pagamento em até 35 dias, sujeitos à aprovação de crédito.</p>
 
     </div>
 
