--- a/kit_loreal_dpgp_mg.html
+++ b/kit_loreal_dpgp_mg.html
@@ -49,7 +49,7 @@
                 <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 4.000,00</div>
             </div>
             <div class="col-md-6">
-                <div class="p-3 mb-2 bg-info valor_quantidade text-white rounded"><i class="bi bi-bag-check-fill"></i> Quantidade mínima: 12 itens distintos</div>
+                <div class="p-3 mb-2 bg-info valor_quantidade text-white rounded"><i class="bi bi-bag-check-fill"></i> Quantidade mínima: 6 itens distintos</div>
             </div>
         </div>
 
@@ -94,7 +94,7 @@
                 <div class="p-3 mb-2 bg-light condicoes_box"><p><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
                     <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
-                  </svg></p><p>10% DE DESCONTO</p><p>09/12/2024<br>07/01/2025<br>04/02/2025</p></div>
+                  </svg></p><p>10% DE DESCONTO</p><p>09/12/2024<br>07/01/2025</p></div>
             </div>
 
             <div class="col-md-6">
