--- a/kit_loreal_dpgp_es_mix.html
+++ b/kit_loreal_dpgp_es_mix.html
@@ -29,7 +29,7 @@
             </div>
         </div>
 
-        <h2 class="abaixa"><span class="estados"><img class="img-fluid logo mb-5" src="images/es.svg" alt="Verão Gama 2024">Espírito Santo</span></h2>
+        <h2 class="abaixa"><span class="estados"><img class="img-fluid logo mb-5" src="images/es.svg" alt="Verão Gama 2024">Espírito Santo +Mix</span></h2>
        
         <!-- MARCA FORNECEDOR -->
         <div>
@@ -60,7 +60,7 @@
                         <th class="col-thin" id="tab_colunas">CÓDIGO</th>
                         <th class="col-large" id="tab_colunas">PRODUTO</th>
                         <th class="col-thin" id="tab_colunas">QUANT. SUGERIDA</th>
-                        <th class="col-small" id="tab_colunas">VALOR UNITÁRIO<br>COM 15% DESC.</th>
+                        <th class="col-small" id="tab_colunas">VALOR UNITÁRIO<br>COM 10% DESC.</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -68,6 +68,7 @@
                 </tbody>
                 <thead>
                     <tr >
+                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>O item 26925 possuem a quantidade máxima de pack por kit, favor enviar a quantidade de promopack na observação do pedido.</th>
                     </tr>
                 </thead>
             </table>
